--- a/aboutMe.html
+++ b/aboutMe.html
@@ -9,13 +9,13 @@
     <header>
         <div class="nav">
             <ul>
-                <li class="home"><a href="Navigation.html">Home</a></li>
+                <li class="home"><a href="index.html">Home</a></li>
                 <li class="tutorials">
-                    <a class="active" href="Photography.html">Photography</a></li>
-                <li class="about"><a href="AboutMe.html">About Me</a></li>
-                <li class="news"><a href="Technology.html">Technology</a></li>
-                <li class="contact"><a href="Contact.html">Contact</a></li>
-                <li class="debate"><a href="Debate.html">Debate</a></li>
+                    <a class="active" href="photography.html">Photography</a></li>
+                <li class="about"><a href="aboutMe.html">About Me</a></li>
+                <li class="news"><a href="technology.html">Technology</a></li>
+                <li class="contact"><a href="contact.html">Contact</a></li>
+                <li class="debate"><a href="debate.html">Debate</a></li>
             </ul>
         </div>
     </header>
